# Mongo-Quotes-with-Redis-and-RabbitMQ

./: README.md  config.ini  consumer_SMS.py  consumer_email.py  models.py  producer.py  pyproject.toml  read.py  seed.py
