[tool.poetry]
name = "quotes-app"
version = "0.1.0"
description = ""
authors = ["AusAura <91804331+AusAura@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
celery = "^5.3.4"
faker = "^19.10.0"
pymongo = {extras = ["srv", "tls"], version = "^4.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
